name:                h-data-converter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/h-data-converter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , src/FLexer.x
                   , src/FParser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Conv
                     , FLexer
                     , FParser
                     , FSyntax
                     , FPrint
                     , FEval
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , array
                     , mtl
  default-language:    Haskell2010

executable h-data-converter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , h-data-converter
                     , mtl
  default-language:    Haskell2010

test-suite h-data-converter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , h-data-converter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/h-data-converter
